Basic Application mode set up.
Now runs as intended as a realtime application frame work. Pass
app=appName as an argument and will start with that app running. App is
located in app directory and needs description.json to load. Your code
needs to set groover.application to included in then render process

--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,9 @@
 {
-    description : "Groover settings. This is only for groover and not for the app it is running.",
-    applicationDirectory : "apps",
+    "version" : "V0.0.1",
+    "description" : "Groover settings. This is only for groover and not for the app it is running.",
+    "applicationDirectory" : "\\apps",
+    "scriptDirectory" : "\\scripts",
+    "modualsDirectory" : "\\scripts\\moduals",
+    
+    "dumbLuck" : true
 }
